src/test/ui/derives/clone-debug-dead-code-in-the-same-struct.stderr
error: field is never read: `field1`
  --> $DIR/clone-debug-dead-code-in-the-same-struct.rs:6:5
   |
LL |     field1: (),
   |     ^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/clone-debug-dead-code-in-the-same-struct.rs:1:11
   |
LL | #![forbid(dead_code)]
   |           ^^^^^^^^^
   = note: `Whatever` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis

error: field is never read: `field2`
  --> $DIR/clone-debug-dead-code-in-the-same-struct.rs:7:5
   |
LL |     field2: (),
   |     ^^^^^^^^^^

error: field is never read: `field3`
  --> $DIR/clone-debug-dead-code-in-the-same-struct.rs:8:5
   |
LL |     field3: (),
   |     ^^^^^^^^^^

error: field is never read: `field4`
  --> $DIR/clone-debug-dead-code-in-the-same-struct.rs:9:5
   |
LL |     field4: (),
   |     ^^^^^^^^^^

error: aborting due to 4 previous errors

